# telescreen

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  config.example.yaml
.github/workflows/: rust.yml
src/: cli.rs  config.rs  daemon.rs  logger.rs  main.rs  process_manager.rs  stream_interceptor.rs
